--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,11 +2,14 @@
 @tailwind components;
 @tailwind utilities;
 
-input, textarea{
+img{
+    max-height: 100%;
+}
+input, textarea, select{
  @apply border-2 rounded-md border-gray-300 px-1 w-full;
  @apply mb-2;
 }
-input:focus, textarea:focus{
+input:focus, textarea:focus, select:focus{
  @apply border-blue-900;
 }
 h1{
